k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: premierleague
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: registry-creds
      containers:
        - name: backend
          image: rg.nl-ams.scw.cloud/premierleague/pl-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/seasons
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: premierleague
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
