k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pl-ingress
  namespace: premierleague
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - premierleague.fhlcrab32.com
        - thesouthstandlens.fhlcrab32.com
      secretName: pl-tls
  rules:
    - host: premierleague.fhlcrab32.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: thesouthstandlens.fhlcrab32.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
